chore: proper subscription management
